--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,36 @@
-# Node.js
-backend/node_modules/
-backend/.env
-backend/package-lock.json
+# Logs
+logs/
+*.log
 
-# React (frontend - planned)
+# Node modules
+backend/node_modules/
 frontend/node_modules/
-frontend/.env
+
+# Build / Dist output
+frontend/dist/
+frontend/dist-ssr/
 frontend/build/
 
-# Logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Env files
+backend/.env
+frontend/.env
+*.local
 
-# OS/IDE/editor stuff
+# Lock files (optional - depends on workflow)
+backend/package-lock.json
+frontend/package-lock.json
+
+# Editor directories and OS files
+.vscode/
+!.vscode/extensions.json
+.idea/
 .DS_Store
 Thumbs.db
-.vscode/
-.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
-# Optional: ignore coverage reports or test outputs
+# Optional: ignore test coverage reports
 coverage/
